# flake8-pylint

./: .gitignore  Taskfile.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
flake8_pylint/: __init__.py  _plugin.py
tests/: test_plugin.py
