[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flake8_pylint"
dist-name = "flake8-pylint"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/flake8-pylint"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "flake8,plugins,pylint,introspection,linter"
requires = [
    "flake8<6.0.0",  # Flake8 dropped support for 4 difit pylint codes, https://github.com/PyCQA/flake8/issues/1759
    "pylint",
]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.flit.metadata.requires-extra]
lint = [
    "flake8",
    "isort",
    "mypy",
    "unify",
]
test = [
    "pytest",
]

[tool.flit.entrypoints."flake8.extension"]
PL = "flake8_pylint:PyLintChecker"

[tool.mypy]
files = ["flake8_pylint"]
python_version = 3.8
ignore_missing_imports = true
# follow_imports = "silent"
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"
